--- a/.config/opencode/config.json
+++ b/.config/opencode/config.json
@@ -3,7 +3,7 @@
   "theme": "opencode",
   "autoshare": false,
   "autoupdate": false,
-  "model": "github-copilot/gpt-5.1-codex-mini",
+  "model": "github-copilot/claude-haiku-4.5",
   "keybinds": {
     "leader": "ctrl+o",
     "session_child_cycle": "<leader>right",
@@ -52,15 +52,6 @@
     "playwright": {
       "type": "local",
       "command": ["npx", "-y", "@playwright/mcp@latest"],
-      "enabled": false
-    },
-    "sequentialthinking": {
-      "type": "local",
-      "command": [
-        "npx",
-        "-y",
-        "@modelcontextprotocol/server-sequential-thinking"
-      ],
       "enabled": false
     },
     "searxng": {
